--- a/xpi/content/overlay.css
+++ b/xpi/content/overlay.css
@@ -1,4 +1,5 @@
 @import url(chrome://ctr_os_special/skin/overlayextra.css);
+@import url(chrome://ctr_os_special/skin/overlayextra.css);
 @namespace url(http://www.mozilla.org/keymaster/gatekeeper/there.is.only.xul);
 
 @-moz-document url(chrome://browser/content/browser.xul),
@@ -8,38 +9,55 @@
 	  min-width: 200px !important;
 	}
 
-	/* spaces and flexible spaces*/
-	*[customizing] #ctr_flexible_space1,
-	*[customizing] #ctr_flexible_space2,
-	*[customizing] #ctr_flexible_space3,
-	*[customizing] #ctr_flexible_space4,
-	*[customizing] #ctr_flexible_space5,
-	*[customizing] #ctr_flexible_space_eb,
-	*[customizing] #ctr_flexible_space_ab{
+	/* spaces, flexible spaces, seperators*/
+	*[customizing] .ctr_flexspaces{
 	  min-width:32px;
 	  width:32px;
 	  background: url("chrome://classic_theme_restorer/content/images/flex_space.png") center no-repeat;
 	}
 
-	*:not([customizing]) #ctr_space1,
-	*:not([customizing]) #ctr_space2,
-	*:not([customizing]) #ctr_space3,
-	*:not([customizing]) #ctr_space4,
-	*:not([customizing]) #ctr_space5{
+	.ctr_spaces{
 	  min-width:15px;
 	  width:15px;
+	}
+	
+	*:not([customizing]) .ctr_spaces{
 	  background: url("chrome://classic_theme_restorer/content/images/space2.png") center no-repeat;
 	}
 	
-	*[customizing] #ctr_space1,
-	*[customizing] #ctr_space2,
-	*[customizing] #ctr_space3,
-	*[customizing] #ctr_space4,
-	*[customizing] #ctr_space5{
-	  min-width:15px;
-	  width:15px;
-	  background: url("chrome://classic_theme_restorer/content/images/space1.png") center no-repeat !important;
-	}	
+	*[customizing] .ctr_spaces{
+	  background: url("chrome://classic_theme_restorer/content/images/space1.png") center no-repeat;
+	}
+
+	.ctr_seperators{
+	  min-width:5px;
+	  width:5px;
+	  background: url("chrome://classic_theme_restorer/content/images/seperator.png") center no-repeat;
+	}
+
+	/*ctr_back-forward-dropmarker */
+	#ctr_back-forward-dropmarker {
+	  list-style-image: url("chrome://browser/skin/toolbarbutton-dropdown-arrow.png") !important;
+	}
+
+	#ctr_back-forward-dropmarker:-moz-lwtheme-brighttext {
+	  list-style-image: url("chrome://browser/skin/toolbarbutton-dropdown-arrow-inverted.png") !important;
+	}
+	#ctr_back-forward-dropmarker > .toolbarbutton-icon {
+	  padding: 2px 0px !important;
+	}
+	#ctr_back-forward-dropmarker dropmarker {
+	  visibility:collapse !important;
+	}
+
+	#ctr_back-forward-button ~ #ctr_back-forward-dropmarker{
+	  margin-left:-6px !important;
+	}
+	#customization-palette #ctr_back-forward-dropmarker image{
+		background:url("chrome://browser/skin/toolbarbutton-dropdown-arrow.png") center center no-repeat !important;
+		list-style-image:none !important;
+	}
+
 	/* ctr addonbar */
 	#ctr_extra-bar,
 	#ctr_addon-bar:not([customizing]) {
@@ -47,13 +65,10 @@
 	}
 	#ctr_addon-bar {
 	  -moz-appearance: none !important;
-	  border:0px !important;
-	  border-top:1px solid #bac7d4 !important;
+	  border: 0px !important;
+	  border-top: 1px solid #bac7d4 !important;
 	}
-	#ctr_addon-bar toolbarbutton {
-	  -moz-appearance: none !important;
-	  margin:0px 1px !important;
-	}
+
 	#ctr_addon-bar toolbarbutton:hover {
       background-image: linear-gradient(hsla(0,0%,100%,.6), hsla(0,0%,100%,.1)) !important;
       border-color: hsla(210,54%,20%,.15) hsla(210,54%,20%,.2) hsla(210,54%,20%,.25) !important;
@@ -61,22 +76,8 @@
                   0 1px hsla(210,54%,20%,.03),
                   0 0 2px hsla(210,54%,20%,.1) !important;
 	}
-	#ctr_addon-bar toolbarbutton .toolbarbutton-icon {
-	  padding:0px !important;
-	  margin:-4px !important;
-	  width: 16px !important;
-	  height: 16px !important;
-	}
-	#ctr_addon-bar .toolbarbutton-menubutton-dropmarker {
-	  padding:0px !important;
-	  margin-left:-2px !important;
-	  margin-right:-1px !important;
-	}
-	#ctr_addon-bar toolbarbutton[type="menu"] dropmarker{
-	  margin-left:3px !important;
-	  margin-right:-5px !important;	
-	}
 
+	/* custom bookmarks-menu-toolbar-button */
 	#PersonalToolbar #ctr_bookmarks-menu-toolbar-button .toolbarbutton-text {
 	  display: -moz-box !important;
 	}
@@ -151,7 +152,11 @@
 	  margin-top: 2px !important;
 	  margin-bottom: 2px !important;
 	}
-	
+
+	#appmenuSecondaryPane .menu-iconic-accel{
+	  visibility:collapse !important;
+	}
+
 	/* remove empty appmenu menu button labels */
 	#ctr_appbuttonPopup #menu_newTabmenu label,
 	#ctr_appbuttonPopup #menu_newEditmenu label,
@@ -198,7 +203,7 @@
 		margin-top:-3px;
 	}
 	
-	#nav-bar- #ctr_appbutton #ctr_appbuttonPopup{
+	#nav-bar #ctr_appbutton #ctr_appbuttonPopup{
 		margin-top:-6px;
 	}
 	
@@ -215,7 +220,6 @@
 
 	#ctr_appbutton,
 	#ctr_appbutton2,
-	/*#ctr_panelui-button,*/
 	#ctr_back-forward-button{
 	  visibility: collapse;
 	}
@@ -229,7 +233,6 @@
 	}
 
 	#customization-palette #ctr_appbutton,
-	/*#customization-palette #ctr_panelui-button,*/
 	#customization-palette #ctr_back-forward-button{
 		visibility: visible !important;
 		background:url("chrome://classic_theme_restorer/content/images/enableoption.png") center no-repeat;
@@ -255,19 +258,19 @@
 	/* buttons */
 	#customization-palette #ctr_bookmarks-menu-toolbar-button,
 	#customization-palette #ctr_bookmarks-button{
-		background:url("chrome://classic_theme_restorer/content/images/bookmarks.png") center no-repeat;
+	  background:url("chrome://classic_theme_restorer/content/images/bookmarks.png") center no-repeat;
 	}
 	#customization-palette #ctr_history-button{
 	  background:url("chrome://classic_theme_restorer/content/images/history.png") center no-repeat;
 	}
 	#customization-palette #ctr_reload-button{
-		background:url("chrome://classic_theme_restorer/content/images/reload.png") center no-repeat;
+	  background:url("chrome://classic_theme_restorer/content/images/reload.png") center no-repeat;
 	}
 	#customization-palette #ctr_stop-button{
-		background:url("chrome://classic_theme_restorer/content/images/stop.png") center no-repeat;
+	  background:url("chrome://classic_theme_restorer/content/images/stop.png") center no-repeat;
 	}
 
-	/*Adblock+ UX*/
+	/*Adblock+ Australis/UX*/
 	#abp-toolbarbutton[customizableui-areatype="toolbar"],
 	#abp-site-info[customizableui-areatype="toolbar"] {
 	  list-style-image: url("chrome://adblockplus/skin/abp-status-16.png")!important;
