--- a/xpi/content/css/tabwidth_150.css
+++ b/xpi/content/css/tabwidth_150.css
@@ -1,8 +1,7 @@
 @namespace url(http://www.mozilla.org/keymaster/gatekeeper/there.is.only.xul);
 
 @-moz-document url(chrome://browser/content/browser.xul){
-
-	#PersonalToolbar:not([customizing]):not(:-moz-lwtheme) {
-	  background: #d2d2d2 !important;
+	.tabbrowser-tab:not([pinned])[fadein]{
+	  max-width: 150px !important;
 	}
 }
