--- a/xpi/ctr_os_special/linux/hidenavbarextra.css
+++ b/xpi/ctr_os_special/linux/hidenavbarextra.css
@@ -2,7 +2,7 @@
 
 @-moz-document url(chrome://browser/content/browser.xul){
 	
-	#PersonalToolbar:not([customizing]) {
+	#PersonalToolbar:not([customizing]):not(:-moz-lwtheme) {
 	  background-image: linear-gradient(to bottom,#e2dfdd,#d5d1cf,#d5d1cf) !important;
 	}
 }
