--- a/xpi/ctr_os_special/winaero/hidenavbarextra.css
+++ b/xpi/ctr_os_special/winaero/hidenavbarextra.css
@@ -5,7 +5,7 @@
 	/* for Windows Aero Theme (AeroBasic/AeroGlass - Vista/7/8) */
 	@media all and (-moz-windows-theme:aero) {
 		
-		#PersonalToolbar:not([customizing]) {
+		#PersonalToolbar:not([customizing]):not(:-moz-lwtheme) {
 		  background-image: linear-gradient(to bottom,#eaf2fb,#dbeaf9,#dbeaf9) !important;
 		}
 	}
@@ -13,7 +13,7 @@
 	/* for Windows Classic Theme on WinVista/7/8 */
 	@media not all and (-moz-windows-theme:aero) {
    	
-		#PersonalToolbar:not([customizing]) {
+		#PersonalToolbar:not([customizing]):not(:-moz-lwtheme) {
 		  background-image: linear-gradient(to bottom,#e6e3df,#d4d0c8,#d4d0c8) !important;
 		}
 
