--- a/xpi/ctr_os_special/winaero/tabsontop_offextra.css
+++ b/xpi/ctr_os_special/winaero/tabsontop_offextra.css
@@ -3,17 +3,17 @@
 @-moz-document url(chrome://browser/content/browser.xul){
 
 	@media not all and (-moz-windows-classic) {
-		#navigator-toolbox > #TabsToolbar,
-		#main-window[tabsintitlebar][sizemode="normal"] #toolbar-menubar[autohide="true"][inactive="true"]:not([customizing="true"]) ~ #TabsToolbar{
+		#navigator-toolbox > #TabsToolbar:not(:-moz-lwtheme),
+		#main-window[tabsintitlebar][sizemode="normal"] #toolbar-menubar[autohide="true"][inactive="true"]:not([customizing="true"]) ~ #TabsToolbar:not(:-moz-lwtheme){
 			background: #dbeaf9 !important;
 		}
 	}
 	
 	@media all and (-moz-windows-classic) {
 
-		#navigator-toolbox > #TabsToolbar,
-		#main-window[tabsintitlebar][sizemode="normal"] #toolbar-menubar[autohide="true"][inactive="true"]:not([customizing="true"]) ~ #TabsToolbar{
-			background: #d4d0c8 !important;
+		#navigator-toolbox > #TabsToolbar:not(:-moz-lwtheme),
+		#main-window[tabsintitlebar][sizemode="normal"] #toolbar-menubar[autohide="true"][inactive="true"]:not([customizing="true"]) ~ #TabsToolbar:not(:-moz-lwtheme){
+			background: -moz-Dialog !important;
 		}
 	}
 	
