--- a/xpi/ctr_os_special/winxp/hidenavbarextra.css
+++ b/xpi/ctr_os_special/winxp/hidenavbarextra.css
@@ -4,35 +4,35 @@
 
 	@media all and (-moz-windows-classic) {
 
-		#PersonalToolbar:not([customizing]) {
+		#PersonalToolbar:not([customizing]):not(:-moz-lwtheme) {
 		  background-image: linear-gradient(to bottom,#e6e3df,#d6d3ce,#d6d3ce) !important;
 		}
 	}
 	
 	@media not all and (-moz-windows-classic) {
    	
-		#PersonalToolbar:not([customizing]) {
+		#PersonalToolbar:not([customizing]):not(:-moz-lwtheme) {
 		  background-image: linear-gradient(to bottom,#f3f1e8,#efebde,#efebde) !important;
 		}
     }
 
 	@media all and (-moz-windows-theme: luna-silver){
 	
-		#PersonalToolbar:not([customizing]) {
+		#PersonalToolbar:not([customizing]):not(:-moz-lwtheme) {
 		  background-image: linear-gradient(to bottom,#ececee,#e0dfe3,#e0dfe3) !important;
 		}
 	}
 	
 	@media all and (-moz-windows-theme: royale){
 
-		#PersonalToolbar:not([customizing]) {
+		#PersonalToolbar:not([customizing]):not(:-moz-lwtheme) {
 		  background-image: linear-gradient(to bottom,#f3f1f4,#ebe9ed,#ebe9ed) !important;
 		}
 	}
 	
 	@media all and (-moz-windows-theme: zune){
 		
-		#PersonalToolbar:not([customizing]) {
+		#PersonalToolbar:not([customizing]):not(:-moz-lwtheme) {
 		  background-image: linear-gradient(to bottom,#eeeeee,#e2e2e2,#e2e2e2) !important;
 		}
 	}	
