--- a/xpi/content/css/back-forward.css
+++ b/xpi/content/css/back-forward.css
@@ -26,6 +26,8 @@
 	}
     #urlbar{
       border-left:1px solid #b4c1cf !important;
+	  border-top-left-radius: 2.5px !important;
+	  border-bottom-left-radius: 2.5px !important;
     }
     #urlbar[focused="true"]{
       border-left:1px solid #72c0fe !important;
