--- a/xpi/content/css/combrelstop.css
+++ b/xpi/content/css/combrelstop.css
@@ -1,9 +1,25 @@
+@import url(chrome://ctr_os_special/skin/combreloadextra.css);
+
 @-moz-document url(chrome://browser/content/browser.xul),
 			   url(chrome://global/content/customizeToolbar.xul) {
 	
-	/* combined stop/reload button */
-	#ctr_reload-button:not([displaystop]) + #ctr_stop-button,
-	#ctr_reload-button[displaystop] {
+	/* hide stop/reload button on urlbar*/
+	#urlbar-container #urlbar-reload-button,
+	#urlbar-container #urlbar-stop-button{
 	  visibility: collapse !important;
+	}
+	
+	#ctr_comb_stopreload-button{
+	  visibility: visible !important;
+	}
+	#customization-palette #ctr_comb_stopreload-button{
+		background:url("chrome://classic_theme_restorer/content/images/reloadstop.png") center no-repeat !important;
+	}
+	
+	#nav-bar #ctr_comb_stopreload-button #urlbar-reload-button:not([disabled]),
+	#nav-bar #ctr_comb_stopreload-button #urlbar-reload-button:not([disabled]),
+	#nav-bar #ctr_comb_stopreload-button #urlbar-stop-button:not([disabled]),
+	#nav-bar #ctr_comb_stopreload-button #urlbar-stop-button:hover:active {
+	  background-image: none !important;
 	}
 }
