--- a/xpi/ctr_os_special/linux/overlayextra.css
+++ b/xpi/ctr_os_special/linux/overlayextra.css
@@ -55,20 +55,21 @@
 	#ctr_addon-bar toolbarbutton {
 	  -moz-appearance: none !important;
 	  margin: 0px 3px !important;
+	  padding:0px !important;
 	}
 	#ctr_addon-bar toolbarbutton .toolbarbutton-icon {
-	  margin: -3px -4px !important;
+	 /* margin: -3px -4px !important;*/
 	  max-width: 18px;
 	  max-height: 18px;
 	}
 	#ctr_addon-bar .toolbarbutton-menubutton-dropmarker {
 	  padding: 0px !important;
 	  margin-left: -3px !important;
-	  margin-right: -1px !important;
+	  /*margin-right: -1px !important;*/
 	}
 	#ctr_addon-bar toolbarbutton[type="menu"] dropmarker{
-	  margin-left: 3px !important;
-	  margin-right: -4px !important;	
+	  /*margin-left: 3px !important;
+	  margin-right: -4px !important;*/	
 	}
 
 }
