--- a/xpi/ctr_os_special/mac/overlayextra.css
+++ b/xpi/ctr_os_special/mac/overlayextra.css
@@ -99,10 +99,11 @@
 	/* ctr addonbar */
 	#ctr_addon-bar toolbarbutton {
 	  -moz-appearance: none !important;
-	  margin: 0px 0px !important;
+	  margin: 0px 3px !important;
+	  padding:0px !important;
 	}
 	#ctr_addon-bar toolbarbutton .toolbarbutton-icon {
-	  margin: 2px -4px !important;
+	  /*margin: 2px -4px !important;*/
 	  max-width: 18px;
 	  max-height: 18px;
 	}
@@ -112,8 +113,8 @@
 	  margin-right: 1px !important;
 	}
 	#ctr_addon-bar toolbarbutton[type="menu"] dropmarker{
-	  margin-left: 3px !important;
-	  margin-right: -4px !important;	
+	  /*margin-left: 3px !important;
+	  margin-right: -4px !important;	*/
 	}
 }
 
