--- a/xpi/ctr_os_special/winaero/combreloadextra.css
+++ b/xpi/ctr_os_special/winaero/combreloadextra.css
@@ -2,22 +2,22 @@
 
 @-moz-document url(chrome://browser/content/browser.xul){
 
-	#nav-bar #ctr_comb_stopreload-button #urlbar-reload-button .toolbarbutton-icon{
+	#ctr_comb_stopreload-button #urlbar-reload-button .toolbarbutton-icon{
 	  list-style-image:url("chrome://classic_theme_restorer/content/images/reload.png") !important;
 	  -moz-image-region: rect(1px, 17px, 17px, 1px) !important;
 	}
 
-	#nav-bar #ctr_comb_stopreload-button #urlbar-stop-button .toolbarbutton-icon{
+	#ctr_comb_stopreload-button #urlbar-stop-button .toolbarbutton-icon{
 	  list-style-image:url("chrome://classic_theme_restorer/content/images/stop.png") !important;
 	  -moz-image-region: rect(1px, 17px, 17px, 1px) !important;
 	}
 	
-	#nav-bar #ctr_comb_stopreload-button #urlbar-reload-button:-moz-lwtheme-brighttext .toolbarbutton-icon{
+	#ctr_comb_stopreload-button #urlbar-reload-button:-moz-lwtheme-brighttext .toolbarbutton-icon{
 	  list-style-image:url("chrome://classic_theme_restorer/content/images/reload-inv.png") !important;
 	  -moz-image-region: rect(1px, 17px, 17px, 1px) !important;
 	}
 
-	#nav-bar #ctr_comb_stopreload-button #urlbar-stop-button:-moz-lwtheme-brighttext .toolbarbutton-icon{
+	#ctr_comb_stopreload-button #urlbar-stop-button:-moz-lwtheme-brighttext .toolbarbutton-icon{
 	  list-style-image:url("chrome://classic_theme_restorer/content/images/stop-inv.png") !important;
 	  -moz-image-region: rect(1px, 17px, 17px, 1px) !important;
 	}
