--- a/xpi/content/css/tabsontop_off.css
+++ b/xpi/content/css/tabsontop_off.css
@@ -26,10 +26,6 @@
 			margin-top:28px !important;
 		}
 		
-		/*#main-window:not([tabsintitlebar])[sizemode="normal"] #toolbar-menubar[autohide="true"][inactive="true"]:not([customizing="true"]) ~ #nav-bar{
-			margin-top:16px !important;
-		}*/
-		
 		#main-window[tabsintitlebar][sizemode="maximized"] #toolbar-menubar[autohide="true"][inactive="true"]:not([customizing="true"]) ~ #nav-bar{
 			margin-top:28px !important;
 		}
@@ -44,10 +40,6 @@
 		#main-window[tabsintitlebar][sizemode="normal"] #toolbar-menubar[autohide="true"][inactive="true"]:not([customizing="true"]) ~ #nav-bar{
 			margin-top:22px !important;
 		}
-		
-		/*#main-window:not([tabsintitlebar])[sizemode="normal"] #toolbar-menubar[autohide="true"][inactive="true"]:not([customizing="true"]) ~ #nav-bar{
-			margin-top:16px !important;
-		}*/
 		
 		#main-window[tabsintitlebar][sizemode="maximized"] #toolbar-menubar[autohide="true"][inactive="true"]:not([customizing="true"]) ~ #nav-bar{
 			margin-top:22px !important;
@@ -67,4 +59,8 @@
 	#main-window[tabsintitlebar] #TabsToolbar .titlebar-placeholder{
 	  visibility:collapse !important;
 	}
+	
+    #main-window:not([tabsintitlebar]) #toolbar-menubar[autohide="true"][inactive="true"]:not([customizing="true"]) ~ #TabsToolbar{
+        margin-left:0px !important;
+    }
 }
