--- a/xpi/ctr_os_special/mac/overlayextra.css
+++ b/xpi/ctr_os_special/mac/overlayextra.css
@@ -91,8 +91,8 @@
 	  -moz-margin-start: 0px !important;
 	}
 	
-	#ctr_addon-bar,
-	#ctr_addon-bar[customizing] {
+	#ctr_addon-bar:not(:-moz-lwtheme),
+	#ctr_addon-bar:not(:-moz-lwtheme)[customizing] {
 	  background:linear-gradient(to bottom,#d2d2d2,#d9d9d9,#e9e9e9);
 	}
 	
